--- a/svelte/package.json
+++ b/svelte/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear"
+    "start": "sirv public --no-clear",
+    "test": "jest"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
@@ -18,6 +19,8 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "jest": "^29.3.1",
     "sirv-cli": "^2.0.0"
   }
 }
